# task-router

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  contribution_scout.py  pyproject.toml
task_router/: __init__.py  __main__.py  cli.py  db.py  scorer.py
task_router/ingest/: __init__.py  calendar.py  email.py  inbox.py  notion.py
