[project]
name = "task-router"
version = "0.2.0"
description = "Unified task ingestion, prioritization, and routing engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rhendy Japelhendal Saragih Sumbayak", email = "rhendygio19@gmail.com" }
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "sqlite-utils>=3.36",
]

[project.optional-dependencies]
gmail = ["google-auth-oauthlib", "google-auth-httplib2", "google-api-python-client"]
notion = ["notion-client"]
calendar = ["google-auth-oauthlib", "google-auth-httplib2", "google-api-python-client"]
dev = ["pytest", "ruff"]

[project.scripts]
taskrouter = "task_router.cli:main"
task-router = "task_router.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
